--- a/CustomRPC/About.lt.resx
+++ b/CustomRPC/About.lt.resx
@@ -117,48 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Error</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
+    <value>134, 93</value>
   </data>
-  <data name="errorCannotConnect" xml:space="preserve">
-    <value>Can't connect to Discord client.
-Are you sure it's running?</value>
-    <comment>@Invariant Unused</comment>
+  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 19</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>No ID specified!</value>
+  <data name="labelMadeBy.Text" xml:space="preserve">
+    <value>Suprogramuota: maximmax42</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>There was an error downloading or installing an update.
-Press "Yes" to retry or "No" to download manually.</value>
+  <data name="buttonClose.Text" xml:space="preserve">
+    <value>Uždaryti</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>First Time Run</value>
-  </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Would you like to open a manual?
-You can open it any time by going to Help -&gt; Open the Manual or pressing F1.</value>
-  </data>
-  <data name="information" xml:space="preserve">
-    <value>Information</value>
-  </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Connected</value>
-  </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Connecting...</value>
-    
-  </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Connection failed (Is Discord running?)</value>
-  </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Disconnected</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Connection error (Wrong ID?)</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>Invalid URL specified for button(s) or the text is too long!</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Apie…</value>
   </data>
 </root>
