--- a/CustomRPC/UpdatePrompt.vi.resx
+++ b/CustomRPC/UpdatePrompt.vi.resx
@@ -117,14 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>312, 326</value>
+  </data>
+  <data name="buttonUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>60, 23</value>
+  </data>
   <data name="buttonUpdate.Text" xml:space="preserve">
     <value>Có</value>
+  </data>
+  <data name="buttonNotNow.Location" type="System.Drawing.Point, System.Drawing">
+    <value>187, 326</value>
+  </data>
+  <data name="buttonNotNow.Size" type="System.Drawing.Size, System.Drawing">
+    <value>119, 23</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
     <value>Không phải bây giờ</value>
   </data>
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>277, 14</value>
+  </data>
   <data name="labelQuestion.Text" xml:space="preserve">
     <value>Bạn có muốn tải xuống bản cập nhật này không?</value>
+  </data>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>185, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
     <value>Không kiểm tra bản cập nhật</value>
@@ -132,6 +151,9 @@
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Phiên bản hiện tại:
 Phiên bản mới nhất:</value>
+  </data>
+  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>136, 23</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
     <value>Bỏ qua phiên bản này</value>
